[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/minimap/alchemist.png" type="Texture" id=1]
[ext_resource path="res://sprites/minimap/enemy.png" type="Texture" id=2]
[ext_resource path="res://scripts/minimap.gd" type="Script" id=3]
[ext_resource path="res://sprites/minimap/enemy1.png" type="Texture" id=4]
[ext_resource path="res://sprites/minimap/enemy2.png" type="Texture" id=5]

[node name="Minimap" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -464.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 251.0
color = Color( 0, 0, 0, 0.760784 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 251.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="MapSpace" type="ColorRect" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 241.0
margin_bottom = 241.0
color = Color( 0.0313726, 0, 0.172549, 0.545098 )

[node name="Player" type="Sprite" parent="MarginContainer/MapSpace"]
position = Vector2( 118, 118 )
texture = ExtResource( 1 )

[node name="Enemy" type="Sprite" parent="MarginContainer/MapSpace"]
visible = false
position = Vector2( 20, 20.5 )
scale = Vector2( 0.375, 0.359375 )
texture = ExtResource( 2 )

[node name="Enemy1" type="Sprite" parent="MarginContainer/MapSpace"]
visible = false
position = Vector2( 117, 161 )
texture = ExtResource( 4 )

[node name="Enemy2" type="Sprite" parent="MarginContainer/MapSpace"]
visible = false
position = Vector2( 190, 47 )
texture = ExtResource( 5 )
